--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.8.1",
-    "lism-css": "^0.0.7"
+    "dayjs": "^1.11.13",
+    "lism-css": "^0.0.9",
+    "microcms-js-sdk": "^3.2.0"
   }
 }
